# tenks

./: .ansible-lint  .gitignore  .gitreview  .travis.yml  README.md  README.rst  requirements.txt  requirements.yml  setup.cfg  setup.py  test-requirements.txt  tox.ini  venv-requirements.txt
ansible/: bmc.yml  cleanup_state.yml  create_libvirt_vms.yml  create_nodes.yml  deploy.yml  deploy_hosts.yml  deploy_nodes.yml  enrol_nodes.yml  flavor_registration.yml  host_setup.yml  hypervisor_setup.yml  ironic_enrolment.yml  libvirt_create_vms.yml  main.yml  node_bmc.yml  node_enrolment.yml  node_instantiation.yml  node_networking.yml  node_physical_network.yml  override.yml.example  physical_network.yml  register_flavors.yml  resource_wait.yml  run.yml  schedule.yml  teardown.yml  virtualbmc.yml  vm_networking.yml  vm_physical_network.yml  vm_virtualbmc.yml
ansible/action_plugins/: tenks_schedule.py  tenks_update_state.py
ansible/filter_plugins/: libvirt_vm_config.py  tenks.py
ansible/group_vars/: all  controllers  hypervisors  libvirt
ansible/host_vars/: localhost
ansible/inventory/: groups  hosts
ansible/templates/: vbmcd.service.j2
ansible/vars/: Debian.yml  RedHat.yml
doc/: requirements.txt
doc/source/: architecture.rst  conf.py  configuration.rst  development.rst  index.rst  install.rst  limitations.rst  run.rst
playbooks/: openvswitch.yml
playbooks/tenks-deploy-teardown/: post.yml  pre.yml  run.yml
tenks/: version.py
tests/: test_tenks_update_state.py  test_tenks_wait_for_resources.py  utils.py
zuul.d/: base.yaml  jobs.yaml  project.yaml
(+80 files in other folders)
