[metadata]
name = tenks
summary = Deployment of virtual bare metal clusters with Tenks
description-file =
    README.rst
author = Will Miller
author-email = willm@stackhpc.com
home-page = https://stackhpc.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    tenks
